--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "private": true,
   "homepage": "https://SergiiGrygor.github.io/goit-react-hw-01-components/",
   "dependencies": {
+    "@emotion/styled": "^11.10.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "modern-normalize": "^1.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "styled": "^1.0.0",
+    "styled-components": "^5.3.6",
+    "styled-system": "^5.1.5",
+    "system": "^2.0.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
